--- a/packages/core/stories/docs.stories.mdx
+++ b/packages/core/stories/docs.stories.mdx
@@ -21,6 +21,11 @@ Additionally, the flush process is asynchronous, so we may receive
 further write requests during flushing.  
 
 <Canvas>
-<h2>Basic Editor</h2> 
+<div>
+    <span style={{fontSize: "1.2em", fontWeight: "bold"}}>Basic Editor</span>
+    <span style={{marginLeft: "0.4em", fontSize: "0.8em"}}>
+        <a href="./?path=/story/debouncer--basic">zoom</a>
+    </span>
+</div>
 <Basic />
 </Canvas>
